# EndUrBias

./: .gitignore  docker-compose-db.yaml  docker-compose.yaml  package-lock.json  package.json
authserver/: Dockerfile  README.md  package-lock.json  package.json
authserver/src/app/: layout.tsx  page.tsx
authserver/src/app/login/: page.tsx
authserver/src/components/: login-form.tsx
authserver/src/lib/: auth.ts
backend/: CV_path.py  Dockerfile  README.md  extract_text.py  llm_anonymizer.py  main.py  pdf_extract.py  pii_redactor.py  processing.py  pyproject.toml  server.py  test.py  test_extract_text.py  test_files.py
db/: Dockerfile  inserts.sql  setup.sql  startup.sh  tables.sql  views.sql
frontend/: Dockerfile  README.md  components.json  next.config.ts  package-lock.json  package.json
frontend/components/header/: header.tsx
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/recruiter/: layout.tsx  page.tsx
frontend/src/app/test/: layout.tsx
frontend/src/app/unauthorized/: page.tsx
frontend/src/app/user/: layout.tsx  page.tsx
frontend/src/components/: dialogProvider.tsx  themeProvider.tsx
frontend/src/components/layout/: appLayout.tsx
frontend/src/components/ui/: appLayout.tsx  apply-form-client.tsx  applyFormClient.tsx  card.tsx  cv-dropzone.tsx  cvDropzone.tsx  header.tsx  jobDetails.tsx  jobDetailsFull.tsx  jobRedirectCard.tsx  loginRedirectCard.tsx  markdownFormatter.tsx  nativeSelect.tsx  pageContentContainer.tsx  paginatedContainer.tsx  seperator.tsx  (+1 more)
frontend/src/lib/: jobs.ts
frontend/styles/: fonts.css
(+76 files in other folders)
