[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.2",
    "uvicorn==0.22.0",
    "websockets==11.0.3",
    "pymupdf>=1.26.6",
    "spacy>=3.8.9",
    "openai>=2.8.1",
]
