[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.101.1",
    "uvicorn==0.22.0",
    "websockets==11.0.3",
    "pymupdf>=1.26.6",
    "spacy>=3.8.9",
    "pip>=25.3",
    "spacy-layout>=0.0.12",
    "pdf2image>=1.17.0",
]
