[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "torchvision==0.24.1+cpu",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.2",
    "uvicorn==0.22.0",
    "websockets==11.0.3",
    "pymupdf>=1.26.6",
    "spacy>=3.8.9",
    "openai>=2.8.1",
    "pip>=25.3",
    "spacy-layout>=0.0.12",
    "pdf2image>=1.17.0",
    "frontmatter>=3.0.8",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "nltk>=3.9.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]